# midnight_sea

./: .gitignore  Makefile  README.md  pyproject.crawler.toml  pyproject.scraper.toml  pyproject.storage.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/clients/: planner.yaml  scraper.yaml  storage.yaml
deployments/: Dockerfile  docker-compose.yaml
lib/: pyproject.toml
lib/client/: client.py
lib/conf/: config.py
lib/src/lib/client/: services.py
lib/src/lib/conf/: config.py
lib/src/lib/config/: config.py
lib/src/lib/logger/: logger.py
lib/src/lib/protos/: crawler_pb2.py  crawler_pb2_grpc.py  planner_pb2.py  planner_pb2_grpc.py  scraper_pb2.py  scraper_pb2_grpc.py  storage_pb2.py  storage_pb2_grpc.py
lib/src/lib/scraper/: factory.py  interfaces.py  scraper.py
lib/src/lib/server/: __init__.py  factory.py  handlers.py
lib/src/lib/stubs/: factory.py  interfaces.py
ms_crawler/: __init__.py  globals.py  logger.py  main.py
ms_scraper/: __main__.py  globals.py  logger.py  main.py
ms_storage/: __init__.py  commands.py  events.py  globals.py  logger.py  main.py
services/crawler/: pyproject.toml
services/crawler/src/client/services/: planner.py
services/crawler/src/protos/: crawler_pb2.py
services/crawler/src/session/: budgets.py
services/crawler/src/strategies/: content.py
services/storage/: pyproject.toml
services/storage/src/client/: client.py
services/storage/src/protos/: planner_pb2.py  scraper_pb2.py  scraper_pb2_grpc.py
tools/: pyproject.toml
tools/crawler/markets/alphabay/: state.yaml
tools/crawler/markets/asap/: state.yaml
tools/crawler/markets/cypher/: state.yaml
tools/crawler/markets/darkfox/: state.yaml
tools/crawler/markets/kingdom/: cookies.json  state.yaml
tools/crawler/markets/tor2door/: state.yaml
tools/crawler/markets/versus/: state.yaml
tools/crawler/markets/vice/: state.yaml
tools/crawler/plans/: README.md  alphabay.yaml  archetyp.yaml  asap.yaml  cypher.yaml  darkfox.yaml  kingdom.yaml  template.yaml  tor2door.yaml  versus.yaml  vice.yaml
tools/protos/: crawler.proto  planner.proto  scraper.proto  storage.proto
tools/scraper/blueprints/: item_template.yaml  vendor_template.yaml
tools/scraper/blueprints/alphabay/: item.yaml  vendor.yaml
tools/scraper/blueprints/asap/: item.yaml  vendor.yaml
tools/scraper/blueprints/cypher/: item.yaml  vendor.yaml
tools/scraper/blueprints/darkfox/: item.yaml  vendor.yaml
tools/scraper/blueprints/kingdom/: item.yaml  vendor.yaml
tools/scraper/blueprints/tor2door/: item.yaml  vendor.yaml
tools/scraper/blueprints/versus/: item.yaml  vendor.yaml
tools/scraper/blueprints/vice/: item.yaml  vendor.yaml
tools/scraper/blueprints/world/: listing.yaml  vendor.yaml
workspaces/scraper/: pyproject.toml
workspaces/scraper/resources/blueprints/: README.md
workspaces/scraper/resources/blueprints/alphabay/: vendor.yaml
workspaces/scraper/resources/blueprints/cypher/: vendor.yaml
workspaces/scraper/src/: __main__.py  globals.py  logger.py  main.py
workspaces/scraper/src/protos/: scraper_pb2_grpc.py
workspaces/scraper/src/scraper/: main.py  scraper.py
workspaces/scraper/src/scraper/conf/: config.yaml
workspaces/scraper/src/scraper/config/: config.yaml
workspaces/scraper/src/scraper/scraper/: blueprint.py  scraper.py
workspaces/scraper/src/scraper/server/: handlers.py  scraper.py  server.py
workspaces/scraper/src/server/: handlers.py
workspaces/storage/: pyproject.toml
workspaces/storage/src/: logger.py
workspaces/storage/src/client/: interfaces.py
workspaces/storage/src/database/: models.py
workspaces/storage/src/protos/: crawler_pb2_grpc.py  storage_pb2.py
workspaces/storage/src/server/: server.py
workspaces/storage/src/storage/: commands.py  events.py  main.py
workspaces/storage/src/storage/api/: factory.py  interfaces.py
workspaces/storage/src/storage/client/: interfaces.py
workspaces/storage/src/storage/client/services/: scraper.py
workspaces/storage/src/storage/config/: config.yaml
workspaces/storage/src/storage/database/: __init__.py  api.py  database.py  interfaces.py  models.py
workspaces/storage/src/storage/database/migrations/: env.py
workspaces/storage/src/storage/database/migrations/versions/: 2c70c5dee4e6_migration.py
workspaces/storage/src/storage/protos/: storage_pb2_grpc.py
workspaces/storage/src/storage/server/: handlers.py  server.py  storage.py
workspaces/storage/src/storage/server/services/: storage.py
workspaces/storage/src/storage/stubs/: interfaces.py  scraper.py
workspaces/storage/src/storage/volume/: volume.py
workspaces/storage/tests/: test_database.py
(+111 files in other folders)
