[tool.poetry]
name = "lib"
version = "0.1.0"
description = ""
authors = ["Ricardo Yaben <rmyl@dtu.dk>"]
packages = [{include = "lib", from = "src"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.4"