[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Ricardo Yaben <32867697+RicYaben@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10 <3.11"
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
wordcloud = "^1.8.1"
ipykernel = "^6.13.0"
seaborn = "^0.11.2"
plotly = "^5.7.0"
nbformat = "^5.3.0"
transformers = "^4.18.0"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
