[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Ricardo Yaben <rmyl@dtu.dk>"]
packages = [{include = "scraper", from = "src"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
hydra-core = "^1.3.2"
lib = { path = "../../lib"}
