[tool.poetry]
name = "storage"
version = "0.1.0"
description = ""
authors = ["Ricardo Yaben <rmyl@dtu.dk>"]
packages = [{include = "storage", from = "src"}]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.26"
pytest-mock = "^3.6.1"
SQLAlchemy-Utils = "^0.37.9"
psycopg2-binary = "^2.9.1"
factory-boy = "^3.2.1"
PyYAML = "^6.0"
python-dotenv = "^0.20.0"
alembic = "^1.8.0"
hydra-core = "^1.3.2"
lib = { path = "../../lib"}
